tests/test_proof/good/enums_inj.catala_en
## Article

```catala
declaration enumeration E:
  -- C1
  -- C2

declaration scope A:
  context x content E
  context y content integer

scope A:
  definition x equals C1
  definition y under condition x = C1 consequence equals 1
  definition y under condition x = C2 consequence equals 2
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/good/enums_inj.catala_en:10.11-10.12:
└──┐
10 │   context y content integer
   │           ‾
   └─ Article
[RESULT] No errors found during the proof mode run.
```
