tests/test_proof/bad/array_length-empty.catala_en
## Test

```catala
declaration scope A:
  context x content collection integer
  context y content boolean

scope A:
  definition x equals [0; 5]
  definition y under condition (number of x) > 0 consequence equals true
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/array_length-empty.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Test
[ERROR] [A.y] This variable might return an empty error:
┌─⯈ tests/test_proof/bad/array_length-empty.catala_en:6.10-11:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
